--- a/champPage.html
+++ b/champPage.html
@@ -55,6 +55,7 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
+                <a href="index.html">Home</a>
                 <h3 class="text-center text-uppercase">Camps</h3>
 
             </div>
@@ -158,7 +159,7 @@
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
@@ -174,7 +175,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
-                    <p>“keeping players in the game longer”.</p>
+                    <h4>“keeping players in the game longer”.</h4>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
