--- a/clinicPage.html
+++ b/clinicPage.html
@@ -56,6 +56,7 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
+                <a href="index.html">Home</a>
                 <h3 class="text-center text-uppercase">Clinics</h3>
 
             </div>
@@ -94,7 +95,7 @@
                 </div>
                 <div class="row align-items-center mt-5">
                     <div class="col-md-12 text-center">
-                        <img src="./img/Next level challenge image.PNG" width="100%" height="100%" alt="">
+                        <img src="./img/0.png" width="40%" height="40%" alt="">
                     </div>
                 </div>
             </div>
@@ -170,7 +171,7 @@
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
+            <div class="row ">
                 <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
@@ -186,7 +187,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
-                    <p>“keeping players in the game longer”.</p>
+                    <h4>“keeping players in the game longer”.</h4>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
