--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <a href="">
+                    <a href="team.html">
                         <div class="content-section">
                             <div class="card">
                                 <div class="imagee"><img src="./img/Team pic image 7 (1).png" alt="" class="ms-4"></div>
@@ -449,7 +449,7 @@
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
@@ -465,7 +465,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
-                    <p>“keeping players in the game longer”.</p>
+                    <h4>“keeping players in the game longer”.</h4>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
