--- a/miniAllies.html
+++ b/miniAllies.html
@@ -56,6 +56,8 @@
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
+
+                <a href="index.html">Home</a>
                 <h3 class="text-center text-uppercase">Mini Allies</h3>
 
             </div>
@@ -157,11 +159,11 @@
                     <br>
                     <br>
 
-                    <span> When:</span> Every Wednesday starting April 14th
+                    <span> When:</span> Please see available Mini Allies clinics above
                     <br>
                     <br>
 
-                    <span> Time:</span> 6:30-7:30pm
+                    <span> Time:</span> Please see available Mini Allies clinics above
                     <br>
                     <br>
 
@@ -233,28 +235,28 @@
                     <h5> Check out his coaching pedigree below!</h5>
                     <br>
                     <ul>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Graduate National C certification </a>
+                        <li><i class="fas fa-check-double me-2"></i>Graduate National C certification 
                         </li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Assistant Coach - MacArthur High School -
-                                2001 - 2007</a></li>
+                        <li><i class="fas fa-check-double me-2"></i>Assistant Coach - MacArthur High School -
+                                2001 - 2007</li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Lawton Soccer Academy Head Coach U17 -
-                                U19 2007-2012</a></li>
+                        <li><i class="fas fa-check-double me-2"></i>Lawton Soccer Academy Head Coach U17 -
+                                U19 2007-2012</li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017
-                            </a>
+                        <li><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017
+                            
                         </li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School -
-                                2017</a>
+                        <li><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School -
+                                2017
                         </li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Girl's Varsity 2018
-                                - Current</a></li>
+                        <li><i class="fas fa-check-double me-2"></i>Head Coach Crossings Girl's Varsity 2018
+                                - Current</li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 -
-                                Current</a>
+                        <li><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 -
+                                Current
                         </li>
 
                     </ul>
@@ -331,7 +333,7 @@
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
+            <div class="row ">
                 <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
@@ -347,7 +349,7 @@
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
-                    <p>“keeping players in the game longer”.</p>
+                    <h4>“keeping players in the game longer”.</h4>
                 </div>
                 <div class="col-md-3 col-sm-6 footer-m">
                     <div class="quick-links">
