--- a/team.html
+++ b/team.html
@@ -51,102 +51,118 @@
     <!-- header-end -->
 
 
-    <!-- clinics page -->
-    <section class="aboutUs">
+    <!-- miniAllies page -->
+    <section class="team">
         <!-- ======= Breadcrumbs ======= -->
         <section id="breadcrumbs" class="breadcrumbs">
             <div class="container">
+
                 <a href="index.html">Home</a>
-                <h3 class="text-center text-uppercase">About Us</h3>
+                <h3 class="text-center text-uppercase">Teams</h3>
 
             </div>
         </section><!-- End Breadcrumbs -->
         <div class="container">
-            <div class="aboutus-content">
+            <div class="team-content">
                 <div class="row">
-                    <div class="section-title">
-                        <h2>What We<span> Believe</span></h2>
-                    </div>
-                    <div class="col-md-12">
-                        <p> From our experience, we’ve noticed that the majority of players are missing out on the value
-                            of all the intangibles the game can provide. Competing and winning is important, but not
-                            nearly as important as the players enhancing their confidence level to beat defenders
-                            consistently using their own creativity. This is where we come in. We give players the
-                            opportunity to discover their true potential through our structured curriculum. Players are
-                            taught how to take advantage of having the ball at their feet, be creative, and deceive the
-                            defender. We acknowledge that there are many other important factors in being a great soccer
-                            player. Yet, at a young age, confidence with the ball can speed up the game for both the
-                            individual player and their teammates. In doing so, this player has the ability to become
-                            someone that others look up to.
-                            <br>
-                            <br>
-                            Soccer Allies strives to develop leadership qualities in children by using soccer as our
-                            platform. It is our belief that players who are extremely comfortable with the ball gain
-                            more confidence in their ability to execute certain skills or moves on the field. Athletes
-                            that exude confidence tend to be leaders both on the field and in their social circles. We
-                            want to be the program that gives youth players the chance to improve their overall
-                            confidence level.
-                        </p>
-                    </div>
-                </div>
-                <hr>
-                <div class="row mt-4">
-                    <div class="section-title">
-                        <h2> What We<span> Do</span></h2>
-                    </div>
-                    <div class="col-md-12">
-                        <p> At the youth level players are constantly put under pressure by defenders, whether in games,
-                            practices, or drills. Soccer Allies delivers the tools to help players understand how to get
-                            out of these situations. It all starts in being comfortable with the ball at your feet. We
-                            ingrain the attributes needed to become a successful dribbler by constantly addressing:
-                            <br>
-                        <ol>
-                            <li>Proper dribbling technique</li>
-                            <li>The importance of control over speed</li>
-                            <li>Looking at an angle while dribbling</li>
-                            <li> Manipulating the defender by deceptive dribbling.</li>
-                        </ol>
-                        <br>
-                        Once players recognize why these attributes are important, it is inevitable that they will push
-                        themselves to learn more and try new skills. In realizing this, Soccer Allies has come up with a
-                        progression format, the Next Level Challenge, which will hold players accountable during their
-                        development. The format challenges players to execute specific touches and skills at each stage.
-                        After they perform these techniques with quality they must be able to use them in 1v1 game-like
-                        situations. If they successfully complete these skills based on the coach’s discretion, they
-                        will be rewarded by moving to the next stage. Our goal is for everyone to graduate through the
-                        process and become “Next Level” players. These players will join an elite group throughout the
-                        area in more intense sessions geared towards decision-making at every position on the field.
-                        </p>
+                    <div class="col-12">
+                        <div class="section-title">
+                            <h2>Group Trial <span>Rate</span> Information</h2>
+                            <p>
+                                -> Have a group of SIX or more players who would like to attend the Soccer Allies
+                                clinics?
+                                <br>
+                                <br>
+
+                                ->Are you a coach that would like your players to take advantage of supplemental
+                                training
+                                for individual development outside of team practices?
+                                <br>
+                                <br>
+
+                                ->Soccer Allies is happy to help by offering the Group Trial Rate to your team or group
+                                of
+                                players. We guarantee that your players will fall more in love with the game if they
+                                attend Soccer Allies clinics consistently. The numbers and testimonies speak for
+                                themselves!
+
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <hr>
-                <div class="row mt-4">
-                    <div class="section-title">
-                        <h2> How We<span> Do It</span></h2>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-title">
+                            <h2>How it <span> works </span></h2>
+                            <p class="text-center">
+                                The Group Trial Rate gives teams or groups of six or more players the opportunity to
+                                register for up to six consecutive clinics at a 15% discounted rate. The Team Manager or
+                                point of contact must decide when their group’s six-week block of clinics begins.
+                                Players can attend all six clinics, just a few, or only one but they will receive their
+                                clinic at the discounted rate. After the conclusion of the six-week block, all players
+                                who were a part of the initial team or group will have to pay full price for clinics
+                                moving forward.
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-md-12">
-                        <p> Soccer Allies offers both camps and weekly clinics to players. Our methodology focuses on
-                            how to use different skills based on the positioning of the defender and where the player is
-                            on the field. This will help players in UNDERSTANDING when to perform a skill and why it
-                            works.
-                            <br>
-                            <br>
-                            In our progression program, the reason why players use specific skills will be noted at each
-                            level as our ”concept”. Players must show that they understand the concept and perform their
-                            touches or skills with quality at the coach’s approval. Once completing their task at each
-                            level, they will progress and be acknowledged for their advancement. Soccer Allies has a
-                            total of 12 levels that players must pass with quality to become “Next Level” players at
-                            Soccer Allies. “Next Level” players will be presented with more tactical and conceptual
-                            sessions in the future and be known to the Soccer Allies community as a skillful player who
-                            understands the game and is willing to put effort in to achieve success.
-                        </p>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-title">
+                            <h2>Detailed <span> Information </span></h2>
+                            <p class="">
+                                ->Email <a href=""> info@soccerallies.com</a> and write in the subject line: GROUP TRIAL RATE.
+                                <br>
+                                <br>
+                                ->Attach your team’s roster or write out the full names of all players in your group
+                                (Maximum of 14 total players). <br>
+                                <br>
+                                ->Include in the email the date of the first clinic you would like your Group Trial Rate
+                                to begin. You must pick one clinic you want to attend weekly. Your group of players will
+                                be allowed to register for one clinic per week during the six-week block at a discounted
+                                rate.
+                                <br>
+                                <br>
+                                ->Within 24 hours of the initial email, the Team Manager will receive a PROMO CODE from
+                                Soccer Allies that any of their players can use when registering for a clinic in their
+                                designated six-week block.
+                                <br>
+                                &nbsp; &nbsp; ->Parents or legal guardians must input the
+                                discount code when registering their player to receive the 15% discounted rate.
+                            </p>
+                        </div>
                     </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section-title">
+                            <h2>IMPORTANT </h2>
+                            <p class="text-center">
+                                Players can only take advantage of the Group Trial Rate ONCE at Soccer Allies. It is
+                                important for the Team Manager or point of contact to explain to each of their
+                                players/parents that each of them has only ONE CHANCE to partake in this opportunity. A
+                                player CANNOT be placed on a list in the future and expect to receive a 15% discounted
+                                rate if they have been on another list previously.
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <img src="./img/ronal.jpg"  width='100%' height="100%" alt="">
+                    </div>>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- clinics page-end -->
 
+
+
+    </section>
+    <!-- miniAllies page-end -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -215,7 +231,7 @@
     <!-- Footer -->
     <footer>
         <div class="container-fluid">
-            <div class="row ">
+            <div class="row">
                 <div class="col-md-3 col-sm-6 ">
                     <div class="social-wrap">
                         <img src="./img/logo.png" alt="" height="100px
@@ -260,6 +276,10 @@
         </div>
     </footer>
     <!-- Footer-end -->
+
+
+
+
 
 
 
